# sparklify

./: .gitignore  README.md  pyproject.toml
src/sparklify/: common.py
