[project]
name = "sparklify"
version = "0.0.1"
description = "Helps simplify your spark codes"
authors = [
  { name = "Kairumu", email = "kairumu.0428@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  "requests>2",
]

[project.urls]
"Homepage" = "https://github.com/Kairumu/sparklify"
"Bug Tracker" = "https://github.com/Kairumu/sparklify/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
